fix h1 size on mobile

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -178,10 +178,13 @@ h3 {
     body {
         font-size: 26px;
     }
+    h1 {
+        font-size: 40px;
+    }
     h2 {
         font-size: 30px;
         margin-top: 40px;
-        margin-bottom: -30px;
+        margin-bottom: -20px;
         font-weight: 400;
     }
     h3 {
